--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-spinner": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-multi-carousel": "^2.5.5",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5"
   },
