--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.5.5",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +50,5 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "react-redux": "^7.2.0",
-    "redux-thunk": "^2.3.0"
   }
 }
